tests/ui/endpoint/custom_method_missing.stderr
error: Missing `method` attribute (e.g. `#[endpoint(method = "gotham_restful::gotham::hyper::Method::GET")]`)
 --> tests/ui/endpoint/custom_method_missing.rs:8:1
  |
8 | #[endpoint(uri = "custom_read")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `endpoint` (in Nightly builds, run with -Z macro-backtrace for more info)
